--- a/book-exchange-frontend/package.json
+++ b/book-exchange-frontend/package.json
@@ -11,16 +11,18 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@types/react": "^18.3.3",
     "axios": "^1.7.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.2",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
