--- a/book-exchange-frontend/package.json
+++ b/book-exchange-frontend/package.json
@@ -19,6 +19,8 @@
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "react-swipeable": "^7.0.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
