--- a/book-exchange-frontend/package.json
+++ b/book-exchange-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.7",
     "@hookform/resolvers": "^3.9.0",
     "@types/react": "^18.3.3",
     "axios": "^1.7.2",
@@ -25,6 +26,7 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
